<resources>
    <string name="lang">eng</string>
    <string name="step_2"><![CDATA[<font color=#999999>Step 2 of 3: security</font><br><br>%1$s]]></string>
    <string name="step_3"><![CDATA[<font color=#999999>Final step: fees</font><br><br>%1$s]]></string>
    <string name="emerge_report">Show error report</string>
    <string name="emerge_mode">Emergency mode</string>
    <string name="unlock">Unlock Wallet</string>
    <string name="secret_info">pick a good passcode\nor just leave the field blank\nto have an unencrypted wallet</string>
    <string name="sets_rescan_ok">Application is about to be closed now and blockchain rescanning will be triggered on next launch.</string>
    <string name="sets_secret_ok">Passcode has been set to «%1$s»\n\nMake sure that wallet mnemonic phrase is saved so you can use it in case if passcode gets lost.</string>
    <string name="greetings">Bitcoin + Lightning Wallet\nPlease read a short yet important\n<a href='http://lightning-wallet.com'>wallet manual</a> before proceeding</string>
    <string name="fee_risky"><![CDATA[<small>%1$s<br><small>Standard transaction fee</small></small>]]></string>
    <string name="fee_live"><![CDATA[<small>%1$s<br><small>Priority transaction fee</small></small>]]></string>
    <string name="copied_to_clipboard">Copied «%1$s»</string>
    <string name="wallet_restore">Restore Wallet</string>
    <string name="wallet_create">New Bitcoin Wallet</string>
    <string name="btc_wallet">Empty Bitcoin wallet</string>
    <string name="ln_wallet">Lightning wallet</string>
    <string name="create_wallet_creating">Generating your wallet\nIt may take up to a few minutes</string>
    <string name="restore_when">When was Bitcoin wallet created?\nLeave date as is if not sure</string>
    <string name="restore_wallet_restoring">Restoring your wallet\nIt may take a while</string>
    <string name="restore_mnemonic_wrong">Phrase must be 12 words long</string>
    <string name="restore_hint">Your BIP32 mnemonic phrase</string>
    <string name="read_settings"><![CDATA[<small>Feerate: %1$s / kB, v0.08&#8211;28<br>Got some questions or feel lost?<br><a href=http://lightning-wallet.com>Read a short app manual</a></small>]]></string>
    <string name="fiat_set_denom"><![CDATA[<small>฿ %1$s<br>&#9735; %2$s<br><br><a href=http://lightning-wallet.com/setting-up-bitcoin-wallet#how-bitcoin-wallet-displays-a-balance>Read about Bitcoin balances</a></small><br><br>Set Bitcoin unit]]></string>
    <string name="boost_details"><![CDATA[Would you like to raise a fee for this transaction and thus get it confirmed faster?<br><br>current sum %1$s<br>after raise %2$s<br>]]></string>
    <string name="olympus_what"><a href='http://lightning-wallet.com/what-does-olympus-server-do#what-does-olympus-server-do'>What does Olympus server do</a></string>
    <string name="channel_recovery_info">
        Channel recovery tool asks Olympus servers for available channel backups and uses those to reimburse locked funds back into
        your Bitcoin wallet.\n\nYou should expect a refunding Bitcoin transaction shortly after starting it if you do have lost channels
        with some locked funds, otherwise nothing will happen.\n\nAlso, using this tool does not affect open channels currently present
        on this device.
    </string>
    <string name="mnemonic_info">
        <font color="#E31300">Mnemonic phrase is important</font>\n
        <a href="http://lightning-wallet.com/setting-up-bitcoin-wallet#mnemonic-code">Read about it</a> and save it!
        \n\nSaving and properly securing a mnemonic phrase is a single most important action to do once a fresh Bitcoin wallet is created.
        \n\nYou will need it in case of various emergencies such as lost phone or forgotten passcode!
    </string>
    <string name="ln_ops_chan_none">
        <a href='http://lightning-wallet.com/using-lightning-wallet#using-lightning-wallet'>Lightning Network</a>
        enables fast and secure off-chain Bitcoin transactions with low fees. Using it requires you to open a
        <a href='http://lightning-wallet.com/using-lightning-wallet#payment-channel'>payment channel</a>
        with a peer of your choice and then fund it with an on-chain Bitcoin transaction.
    </string>
    <string name="tokens_warn"><![CDATA[
        Please note: this wallet uses paid <a href=http://lightning-wallet.com/storage-tokens#storage-tokens>storage tokens</a>
        to secure your encrypted channel backups.<br><br>An automatic Lightning payment of <i>%1$s</i> will acquire 50 storage tokens once
        your first channel becomes open.<br><br>These tokens will safeguard you from accidental money loss for the next 50 payment channels.
    ]]></string>
    <string name="zygote_details"><![CDATA[
        Migration tool creates a full snapshot of current wallet state which can be
        used to fully restore your wallet at a later time, possibly on another device.<br><br>
        <strong>Two use cases for this tool</strong><br>
        1. Moving wallet data from one phone to another.<br>
        2. Deleting wallet and restoring it a bit later.<br><br>
        This tool <strong>SHOULD NOT</strong> be used to store a long-term backup of
        your wallet or create multiple copies of the same wallet on many devices!
    ]]></string>
    <string name="olympus_actions">Add, remove or reorder</string>
    <string name="olympus_backup">Use as backup server</string>
    <string name="olympus_edit">Edit Olympus server</string>
    <string name="olympus_add">Add Olympus server</string>
    <string name="olympus_hint">Server host:port</string>
    <string name="sets_manage_olympus">Manage Olympus servers</string>
    <string name="sets_chan_recover">Use channel recovery tool</string>
    <string name="sets_zygote">Use wallet migration tool</string>
    <string name="sets_secret_change">Change passcode</string>
    <string name="sets_mnemonic">View mnemonic phrase</string>
    <string name="sets_rescan">Rescan blockchain</string>
    <string name="secret_wallet">Passcode</string>
    <string name="secret_wrong">Wrong passcode</string>
    <string name="action_bitcoin_send">Send bitcoin</string>
    <string name="action_bitcoin_receive">Receive bitcoin</string>
    <string name="action_ln_receive">Receive lightning</string>
    <string name="action_ln_details">View channel details</string>
    <string name="action_ln_open">Open new channel</string>
    <string name="action_ln_close">Close channel</string>
    <string name="action_ln_force">Force close</string>
    <string name="amount_hint_sat"><![CDATA[Amount in Satoshi%1$s]]></string>
    <string name="amount_hint_btc"><![CDATA[Amount in Bitcoin%1$s]]></string>
    <string name="amount_hint_fin"><![CDATA[Amount in Finney%1$s]]></string>
    <string name="spend_address_tip">Paste BTC address</string>
    <string name="amount_hint_can_send"><![CDATA[<br><small>can send %1$s</small>]]></string>
    <string name="amount_hint_can_receive"><![CDATA[<br><small>can receive %1$s</small>]]></string>
    <string name="amount_hint_newchan"><![CDATA[<br><small>min capacity %1$s<br>max capacity %2$s<br>can send %3$s</small>]]></string>
    <string name="dialog_chain_behind">Bitcoin wallet is catching up: please wait a bit and try again</string>
    <string name="dialog_clipboard_absent">Nothing useful in clipboard</string>
    <string name="dialog_address_wrong">Bitcoin address is required</string>
    <string name="dialog_pr_making">Making payment request&#8230;</string>
    <string name="dialog_pr_expired">Expired payment request</string>
    <string name="dialog_recovering">Recovering funds&#8230;</string>
    <string name="dialog_sum_empty">Please provide an amount</string>
    <string name="dialog_sum_small">Amount is too small</string>
    <string name="dialog_sum_big">Amount is too large</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_retry">Retry</string>
    <string name="dialog_boost">Boost</string>
    <string name="dialog_next">Next</string>
    <string name="dialog_pay">Pay</string>
    <string name="dialog_ok">OK</string>
    <string name="btc_status_connecting">Connecting to Bitcoin peers&#8230;</string>
    <string name="btc_status_online">Bitcoin wallet is online</string>
    <string name="ln_status_none">No open channel found</string>
    <string name="ln_status_peer">Select peer</string>
    <string name="secret_changing">Updating passcode&#8230;</string>
    <string name="secret_checking">Checking passcode&#8230;</string>
    <string name="btc_announcing">Announcing transaction&#8230;</string>
    <string name="btc_progress_done">Blockchain is up to date</string>
    <string name="btc_received">Bitcoin transaction received</string>
    <string name="btc_sent">Bitcoin transaction sent</string>
    <string name="txs_fee_incoming"><![CDATA[<font color=#1BA2E0>Incoming transaction</font><br>%1$s]]></string>
    <string name="txs_fee_details"><![CDATA[<font color=#E31300>Outgoing transaction</font><br>%2$s<br><br>%1$s fee]]></string>
    <string name="txs_fee_absent"><![CDATA[<font color=#E31300>Outgoing transaction</font><br>%1$s<br><br>No fee]]></string>
    <string name="txs_sum_out"><![CDATA[<font color=#E31300>%1$s</font>]]></string>
    <string name="txs_sum_in"><![CDATA[<font color=#1BA2E0>%1$s</font>]]></string>
    <string name="txs_view_outside">View on SmartBit site</string>
    <string name="txs_p2wsh">Payment channel funding</string>
    <string name="err_ln_no_data_loss_protect">Data loss protection is not provided by this node.</string>
    <string name="err_ln_peer_offline">This remote peer could not be reached. Please try a different one.</string>
    <string name="err_ln_remote_amount_low">Failed because payment amount is too low for your peer to accept.</string>
    <string name="err_ln_amount_overflow">Failed because payment amount exceeds an allowed maximum.</string>
    <string name="err_ln_fulfilled">Failed because this payment has been fulfilled already.</string>
    <string name="err_ln_too_many">Failed because too many payments are already in-flight.</string>
    <string name="err_ln_no_route">Failed because no route to recipient could be found.</string>
    <string name="err_ln_in_flight">Failed because this payment is currently in-flight.</string>
    <string name="err_ln_frozen">Can not retry this payment because it is frozen.</string>
    <string name="err_ln_6_confs">Can\'t ask for payments because a funding Bitcoin transaction has not got 6 confirmations yet.</string>
    <string name="err_ln_reserve">Can\'t ask for payments yet because first you need to spend at least %1$s in order to <a href="http://lightning-wallet.com/using-lightning-wallet#using-lightning-wallet#receiving-lightning-funds">make some space</a> for receiving.</string>
    <string name="err_ln_fee_overflow"><![CDATA[Failed because this payment combined with Bitcoin <a href=http://lightning-wallet.com/using-lightning-wallet#commit-transaction-fee>commit transaction</a> fee exceeds your unspendable channel reserve<br><br>reserve %1$s<br>sending %2$s<br>missing %3$s.]]></string>
    <string name="err_ln_not_enough_funds"><![CDATA[<strong>Not enough funds</strong><br>for a payment channel<br><br>can send %1$s<br>min required %2$s<br>pending %3$s<br><br>Please note that pending Bitcoin transactions need to get at least one confirmation to become spendable.]]></string>
    <string name="err_not_enough_funds"><![CDATA[<strong>Not enough funds</strong><br><br>can send %1$s<br>sending %2$s<br>missing %3$s<br>pending %4$s<br><br>Please note that pending Bitcoin transactions need to get at least one confirmation to become spendable.]]></string>
    <string name="err_transaction_too_large">Failed because transaction is too big for Bitcoin network to process. Try breaking it into a number of smaller transactions.</string>
</resources>