<LinearLayout
    style="@style/StandardLinearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:visibility="gone"
        style="@style/TransButton"
        android:id="@+id/useFingerprint"/>

    <Button
        style="@style/TransButton"
        android:id="@+id/changePass"
        android:text="@string/sets_secret_change"/>

    <Button
        style="@style/TransButton"
        android:id="@+id/rescanWallet"
        android:text="@string/sets_rescan"/>

    <Button
        style="@style/TransButton"
        android:id="@+id/viewMnemonic"
        android:text="@string/sets_mnemonic"/>

    <Button
        style="@style/TransButton"
        android:id="@+id/manageOlympus"
        android:text="@string/sets_manage_olympus"/>

    <Button
        style="@style/TransButton"
        android:id="@+id/createZygote"
        android:text="@string/sets_zygote"/>

    <Button
        style="@style/TransButton"
        android:id="@+id/recoverChannelFunds"
        android:text="@string/sets_chan_recover"/>

    <View style="@style/GrayDivider"/>
</LinearLayout>