<LinearLayout
    style="@style/StandardLinearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        style="@style/StandardLinearLayout"
        android:background="@color/bg"
        android:id="@+id/mainChoice"
        android:visibility="gone">

        <TextView
            style="@style/Info"
            android:id="@+id/mainGreetings"
            android:text="@string/greetings"
            android:layout_marginBottom="45dp"
            android:layout_width="wrap_content"/>

        <Button
            style="@style/Info"
            android:onClick="exitCreateWallet"
            android:layout_width="wrap_content"
            android:text="@string/wallet_create"/>

        <TextView
            style="@style/Info"
            android:text="&#8226;"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"/>

        <Button
            style="@style/Info"
            android:onClick="goRestoreWallet"
            android:layout_width="wrap_content"
            android:text="@string/wallet_restore"/>

    </LinearLayout>

    <LinearLayout
        style="@style/StandardLinearLayout"
        android:background="@color/bg"
        android:id="@+id/mainPassForm"
        android:visibility="gone">

        <EditText
            style="@style/Info"
            android:id="@+id/mainPassData"
            android:inputType="textPassword"
            android:layout_width="wrap_content"
            android:hint="@string/secret_wallet"/>

        <Button
            style="@style/MarginInfo"
            android:text="@string/unlock"
            android:id="@+id/mainPassCheck"
            android:layout_width="wrap_content"/>

        <ImageView
            android:visibility="gone"
            android:id="@+id/mainFingerprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fingerprint_24dp"/>

    </LinearLayout>
</LinearLayout>