<LinearLayout
    style="@style/StandardLinearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        style="@style/StandardLinearLayout"
        android:id="@+id/restoreInfo">

        <TextView
            style="@style/MarginInfo"
            android:layout_width="wrap_content"
            android:text="@string/restore_when"/>

        <Button
            style="@style/Info"
            android:onClick="setWhen"
            android:id="@+id/restoreWhen"
            android:layout_width="wrap_content"/>

        <com.hootsuite.nachos.NachoTextView
            app:chipTextColor="@color/white"
            app:chipVerticalSpacing="2dp"
            app:chipBackground="#656565"
            app:chipTextSize="18sp"
            app:chipHeight="26dp"
            app:chipSpacing="3dp"

            android:inputType="textMultiLine|textVisiblePassword"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:hint="@string/restore_hint"
            android:id="@+id/restoreCode"
            style="@style/MarginInfo"/>

        <EditText
            style="@style/Info"
            android:minWidth="120dp"
            android:id="@+id/restorePass"
            android:layout_width="wrap_content"
            android:inputType="textVisiblePassword"/>

        <TextView
            style="@style/Info"
            android:layout_width="wrap_content"
            android:text="@string/secret_info"/>

        <Button
            style="@style/MarginInfo"
            android:onClick="recWallet"
            android:id="@+id/restoreWallet"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:text="@string/wallet_restore"
            android:enabled="false"/>

    </LinearLayout>

    <LinearLayout
        style="@style/StandardLinearLayout"
        android:id="@+id/restoreProgress"
        android:visibility="gone">

        <ImageView
            style="@style/MarginInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"/>

        <TextView
            style="@style/Info"
            android:layout_width="wrap_content"
            android:text="@string/restore_wallet_restoring"/>

    </LinearLayout>
</LinearLayout>