<RelativeLayout
    style="@style/StandardLinearLayoutPage"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto">

    <LinearLayout style="@style/StandardLinearLayout">
        <include layout="@layout/toolbar"/>

        <View
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="24sp"/>

        <ListView
            android:layout_weight="1"
            android:visibility="gone"
            android:id="@+id/itemsList"
            style="@style/GrayDividerListView"/>

        <LinearLayout
            android:layout_weight="1"
            android:visibility="invisible"
            android:id="@+id/mnemonicWarn"
            style="@style/WarnLinearLayout">

            <Button
                style="@style/MarginInfo"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/ic_verified_user_black_18dp"
                android:text="@string/sets_mnemonic"
                android:layout_width="wrap_content"
                android:onClick="viewMnemonic"/>

            <View
                android:id="@+id/actionDivider"
                style="@style/GrayDivider"/>

            <TextView
                style="@style/MarginInfo"
                android:id="@+id/mnemonicInfo"
                android:text="@string/mnemonic_info"
                android:layout_width="wrap_content"/>

        </LinearLayout>
    </LinearLayout>

    <com.github.clans.fab.FloatingActionMenu
        fab:menu_icon="@drawable/ic_btc_24dp"
        fab:menu_colorPressed="@color/btc"
        fab:menu_colorNormal="@color/btc"
        fab:menu_colorRipple="@color/btc"
        style="@style/FloatingMenu">

        <com.github.clans.fab.FloatingActionButton
            android:src="@drawable/ic_arrow_upward_white_18dp"
            fab:fab_label="@string/action_bitcoin_send"
            fab:fab_colorPressed="@color/btc"
            fab:fab_colorNormal="@color/btc"
            fab:fab_colorRipple="@color/btc"
            android:onClick="goBTCSendForm"
            style="@style/FabButton"
            fab:fab_size="mini"/>

        <com.github.clans.fab.FloatingActionButton
            android:src="@drawable/ic_arrow_downward_white_18dp"
            fab:fab_label="@string/action_bitcoin_receive"
            android:onClick="goReceiveBtcAddress"
            fab:fab_colorPressed="@color/btc"
            fab:fab_colorNormal="@color/btc"
            fab:fab_colorRipple="@color/btc"
            style="@style/FabButton"
            fab:fab_size="mini"/>

        <com.github.clans.fab.FloatingActionButton
            android:src="@drawable/ic_fullscreen_white_18dp"
            fab:fab_label="@string/action_scan"
            fab:fab_colorPressed="@color/btc"
            fab:fab_colorNormal="@color/btc"
            fab:fab_colorRipple="@color/btc"
            style="@style/FabButton"
            android:onClick="goQR"
            fab:fab_size="mini"/>

    </com.github.clans.fab.FloatingActionMenu>
</RelativeLayout>